--- a/site/index.html
+++ b/site/index.html
@@ -10,23 +10,17 @@
 <h1>SPORTS</h1>
 <div class="row">
 <section class="col-lg-4 col-md-6">
-	<h2>Tennis</h2>
-	<div>
+	<h2 id="subh1">Tennis</h2>
 	<p>Tennis is played with racquets, and a light, elastic ball by two players, on a rectangular court divided by a low net. It is played indoors and outdodrs, on hard surface, clay, and grass courts. A player hits the ball over the net, and into the opponents half of the court inn such a way that the opponent cannot reach.</p>
-    </div>
 </section>
 <section class="col-lg-4 col-md-6">
-	<h2>Badminton</h2>
-	<div>
+	<h2 id="subh2">Badminton</h2>
 	<p>
 	In badminton, each game is of 21 points, with players scoring a point whenever they win a rally. A match is the best of three games. Badminton has been an Olympic Sports since 1992, and it is played by both men and women.</p>
-    </div>
 </section>
 <section class="col-lg-4 col-md-6">
-	<h2>Squash</h2>
-	<div>
+	<h2 id="subh3">Squash</h2>
 	<p>Squash is a racquet sport, played with a soft ball, that favours finesse over power. The name 'squash' comes from its soft ball that squashes when it hits the wall. The game is played by two or four players in a four-walled court with a small, hollow rubber ball that they hit with a racquets.</p>
-    </div>
 </section>
 </div>
 </body>
