--- a/site/index.html
+++ b/site/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="style.css">
 	<meta charset="utf-8">
 	<meta name ="viewport" content="width=device-width, initial-scale=1">
+	<meta http-equiv="X-UA-Comptiable" content="IE=edge">
 	<title>assignment</title>
 </head>
 <body>
+	
 <h1>SPORTS</h1>
 <div class="row">
 <section class="col-lg-4 col-md-6">
@@ -23,5 +26,8 @@
 	<p>Squash is a racquet sport, played with a soft ball, that favours finesse over power. The name 'squash' comes from its soft ball that squashes when it hits the wall. The game is played by two or four players in a four-walled court with a small, hollow rubber ball that they hit with a racquets.</p>
 </section>
 </div>
+    <script src="js/jquery-3.5.1.min.js"></script>
+	<script src="js/bootstrap.min.js"></script>
+	<script src="script.js"></script>
 </body>
 </html>
