--- a/site4/index.html
+++ b/site4/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
   <h1>Module 4 Solution Starter</h1>
-  <h2>Pls follow the step</h2>
-  <p>1) right click </p>
-  <p>2) then click on the inspect </p>
-  <p>3) then go to console to find my work </p>
+  <h2>Plz follow the step</h2>
+  <p>1) Right click on the screen </p>
+  <p>2) Then click on the inspect </p>
+  <p>3) Then go to console to find my work </p>
 </body>
 </html>
